name:          curl-aeson
version:       0.0.1
synopsis:      Communicate with JSON over HTTP
description:   A library for communicating with JSON over HTTP connection.
	       Supports rich set of HTTP connectivity features provided by
	       libcurl combined to the performance and elegancy of aeson.
	       .
	       All HTTP methods are supported. Instances of ToJSON and
	       FromJSON typeclasses can be transferred via this library.
	       Session cookies and other HTTP options may be passed to libcurl
	       if needed.
category:      Network, Web, JSON
license:       BSD3
license-file:  LICENSE
author:        Joel Lehtonen
maintainer:    joel.lehtonen+curlaeson@iki.fi
build-type:    Simple
cabal-version: >= 1.2

library
  hs-source-dirs:  src
  exposed-modules: Network.Curl.Aeson
  build-depends:
    aeson >= 0.6.0.0,
    base >= 4.5.0.0,
    bytestring >= 0.9.2.1,
    curl >= 1.3.7,
    text >= 0.11.1.13

source-repository head
  type: git
  location: git://github.com/zouppen/http-json
